--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,2 +1,9 @@
 # Django Web Framework
 Django==2.0.12
+django-environ==0.4.4
+psycopg2==2.7.3.2
+djangorestframework==3.7.3
+python-dateutil==2.6.1
+pytz==2017.3
+django-cors-headers==2.0.2
+requests==2.18.4
